--- a/zuper/static/css/orders/main.css
+++ b/zuper/static/css/orders/main.css
@@ -1,3 +1,7 @@
+body {
+	overflow-y: scroll; 
+}
+
 .header-tabs {
 	text-align: center;
 }
@@ -11,10 +15,25 @@ md-pagination-wrapper {
 	right: 0;
 }
 
+.site-progress-holder {
+	width: 100%;
+	position: relative;
+	height: 4px;
+	background-color: rgba(0, 0, 0, 0.77);
+}
+
+.site-progress {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+}
+
 .new-orders-holder {
 	width: 100%;
 	height: 40px;
 	position: relative;
+	background-color: rgba(0, 0, 0, 0.77);
 }
 
 .new-orders {
@@ -24,36 +43,42 @@ md-pagination-wrapper {
 	margin-left: -65px;
 }
 
+.orders-list-container {
+	width: 100%;
+	min-height: 100%;
+	padding: 16px;
+	background-color: rgba(0, 0, 0, 0.77);
+}
+
 .orders-list {
-	width: 70%;
-	max-width: 600px;
-	margin: 8px auto;
+	width: 87%;
+	/*max-width: 600px;*/
+	margin: 0 auto;
+
 }
 
 .orders-list li {
-	width: 100%;
+	/*width: 100%;*/
 	margin-bottom: 10px;
 }
 
 .orders-list li .order-container {
 	width: 100%;
 	/*min-height: 80px;*/
-	cursor: pointer;
 }
 
 .orders-list li .order-container .order-map{
 	width: 100%;
-	height: 300px;
+	height: 200px;
 }
 
 .orders-list li .order-container .order-mini {
 	width: 100%;
-	padding-left: 8px;
-	padding-bottom: 8px;
+	padding: 8px;
+	background-color: white;
 }
 
 .order-container .order-head {
-	padding-top: 8px;
 }
 
 .order-container .order-head h4 {
@@ -61,27 +86,42 @@ md-pagination-wrapper {
 	font-size: 0.95em;
 }
 
+.order-container .order-head .order-customer,
 .order-container .order-head h5 { 
 	color: rgba(0, 0, 0, 0.51);
 	font-size: 0.8em;
 	line-height: 1.5em;
 }
 
+.order-container .order-head h5 { 
+	font-weight: bold;
+}
 
 .order-container .order-status  {
 	color: white;
-	height: 100%;
-	padding: 8px;
+	height: 40px;
+	width: 100%;
+	padding: 4px;
+	padding-top: 8px;
 	font-size: 0.9em;
 	border-radius: 1px;
 	text-align: center;
 }
 
+.order-container .order-status h4 {
+	font-weight: bold;
+	font-size: 1.2em;
+	vertical-align: middle;
+}
+
+.order-container .order-status .order-update {
+	font-size: 0.7em;
+}
 
 .orders-list li .order-container .order-agent {
 	width: 100%;
 	min-height: 100px;
-	background-color: #e6e6e6;
+	background-color: #ffe6f0;
 	position: relative;
 }
 
@@ -100,9 +140,45 @@ md-pagination-wrapper {
 	width: 100%;
 }
 
-.load-more {
+.order-agent .order-agent-present {
+	padding: 8px;
+	padding-top: 16px;
 	width: 100%;
-	padding: 0;
-	margin: 0;
+	text-align: center;
+}
+
+.order-agent .order-agent-present h4 {
+	line-height: 1.5em;
+}
+
+.order-agent .order-agent-present h5 {
+	color: rgba(0, 0, 0, 0.74);
+	font-size: 0.8em;
+	margin-bottom: 16px;
+}
+
+.order-agent .order-agent-present div {
+	color: rgba(0, 0, 0, 0.74);
+	font-size: 0.8em;
+	font-weight: bold;
+}
+
+.load-more-container {
+	width: 100%;
+	text-align: center;
+	position: relative;
+}
+
+.load-more-container .load-more-progress {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	width: 30%;
+}
+
+.load-more-container .load-more {
+	width: 30%;
 	margin-top: 8px;
 }
