--- a/zuper/templates/base.html
+++ b/zuper/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" type="image/png" href="/static/images/favicon.ico">
 
      <!-- build:css /static/build/base.css -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
+    <!-- <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'> -->
     <link rel="stylesheet" href="/static/bower_components/angular-material/angular-material.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/base.css">
     <!-- endbuild -->
@@ -25,7 +25,6 @@
 
 
     <!-- Scripts Here -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="/static/bower_components/angular/angular.js"></script>
     <script src="/static/bower_components/angular-animate/angular-animate.js"></script>
     <script src="/static/bower_components/angular-aria/angular-aria.js"></script>
