--- a/zuper/templates/orders.html
+++ b/zuper/templates/orders.html
@@ -42,50 +42,75 @@
     </md-toolbar>
 
     <md-tabs md-dynamic-height md-border-bottom class="header-tabs">
-      <md-tab label="ALL" ng-click="listAll('All')"></md-tab>
-      <md-tab label="PENDING" ng-click="listAll('Pending')"></md-tab>
-      <md-tab label="OPEN" ng-click="listAll('Open')"></md-tab>
-      <md-tab label="CLOSED" ng-click="listAll('Closed')"></md-tab>
+      <md-tab label="ALL" ng-click="listAll('All', 'showprogress')"></md-tab>
+      <md-tab label="PENDING" ng-click="listAll('Pending', 'showprogress')"></md-tab>
+      <md-tab label="OPEN" ng-click="listAll('Open', 'showprogress')"></md-tab>
+      <md-tab label="CLOSED" ng-click="listAll('Closed', 'showprogress')"></md-tab>
     </md-tabs>
-    <md-progress-linear class="md-accent" ng-show="showprogress" md-mode="indeterminate"></md-progress-linear>
 
-    <div class="new-orders-holder">
-	    <md-button class="new-orders md-primary" ng-click="getNewOrders()" ng-show="showneworders" >Get New Orders</md-button>
+    <div class="site-progress-holder">
+      <md-progress-linear class="site-progress md-accent" ng-show="showprogress" md-mode="indeterminate"></md-progress-linear>
     </div>
 
-	<ul class="orders-list" ng-cloak>
-		<li ng-cloak ng-repeat="order in orders">
-			<md-whiteframe class="md-whiteframe-1dp order-container" layout="column" ng-click="showDetail(order	)">
-        <iframe 
-            class="order-map"
-            ng-cloak
-            ng-show="order.showDetail"
-            ng-src="[[getLocationUrl(order) | trusted]]"></iframe>
+    <div class="new-orders-holder">
+	    <md-button class="new-orders md-primary" ng-click="getNewOrders()" ng-cloak ng-show="showneworders" >Get New Orders</md-button>
+    </div>
 
+  <section class="orders-list-container">
+  	<ul class="orders-list" ng-cloak layout="row" layout-wrap layout-align="space-between" layout-padding>
+  		<li ng-cloak ng-repeat="order in orders" flex="33">
+  			<md-whiteframe class="md-whiteframe-1dp order-container" layout="column" ng-click="showDetail(order	)">
           
-			    <!-- <section class="order" layout="row" layout-align="space-between start"> -->
-          <section class="order-mini" layout="row" layout-align="space-between start">
-			    	<section class="order-head" flex="70">
-			    		<h4>[[order.id]]: [[order.description]]</h4>
-			    		<h5 ng-show="order.showDetail">[[setOrderType(order.order_type)]]</h5>
-			    		<h5 ng-show="order.estimate && order.showDetail">Estimate: [[order.estimate]]</h5>
-			    	</section>
-			    	<div class="order-status" flex="25" ng-style="{'background-color': setStatusColor(order.status)}"> [[ setStatus(order.status) ]] </div>
-          </section>
-
-          <section class="order-agent" ng-show="order.showDetail">
-            <md-button class="order-agent-assign md-accent" ng-cloak ng-hide="order.agent || order.showagentloader" ng-click="assignAgent($event, order, 5)">Assign Agent</md-button>
-            <md-progress-linear class="md-accent order-agent-assign-progress" ng-show="order.showagentloader" md-mode="indeterminate"></md-progress-linear>
-            <section class="order-agent-present" ng-cloak ng-show="order.agent">
-              [[order.agent.name]]
+  			    <!-- <section class="order" layout="row" layout-align="space-between start"> -->
+            <section class="order-status" ng-style="{'background-color': setStatusColor(order.status)}" layout="row"> 
+              <h4 flex>[[ setStatus(order.status) ]]</h4>
+              <div layout="column" class="order-update" layout-align="space-around center">
+                <div flex>[[order.updated_by.name]]</div>
+                <div flex>[[order.timesince_updated]]</div>
+              </div>
             </section>
-          </section>
-			    <!-- </section> -->
-			</md-whiteframe>
-		</li>
 
-		<md-button class="load-more" ng-show="showloadmore" ng-click="loadMore()">Load More</md-button>
-	</ul>
+            <section class="order-mini" layout="row" layout-align="space-between start">
+  			    	<section class="order-head" flex="100">
+  			    		<h4>[[order.id]]: [[order.description]]</h4>
+  			    		<h5 ng-show="true">[[setOrderType(order.order_type)]]<span ng-cloak ng-show="order.estimate">, Estimate: [[order.estimate]]</span></h5>
+                <div class="order-customer" layout="row">
+                  <span>By: [[order.customer.name]], [[order.customer.phone]]</span>
+                  <span flex></span>
+                  <span>[[order.timesince_created]] ago</span>
+                </div>
+  			    	</section>
+  			    	
+            </section>
+
+            <iframe 
+              class="order-map"
+              ng-cloak
+              ng-show="true"
+              ng-src="[[getLocationUrl(order) | trusted]]"></iframe>
+
+            <section class="order-agent" ng-show="true">
+              <md-button class="order-agent-assign md-accent md-raised" ng-cloak ng-hide="order.agent || order.showagentloader" ng-click="assignAgent($event, order, 5)">Assign Agent</md-button>
+              <md-progress-linear class="md-accent order-agent-assign-progress" ng-show="order.showagentloader" md-mode="indeterminate"></md-progress-linear>
+              <section class="order-agent-present" ng-cloak ng-show="order.agent">
+                <h4>[[order.agent.name]]</h4>
+                <h5>[[order.agent.phone]]</h5>
+                <div layout="row" layout-align="space-between">
+                  <span flex ng-cloak ng-show="[[order.cost_delivery]]">Cost Delivery: [[order.cost_delivery]]</span>
+                  <span flex ng-cloak ng-show="[[order.cost_purchase]]">Cost Purchase: [[order.cost_purchase]]</span>
+                </div>
+              </section>
+            </section>
+  			    <!-- </section> -->
+  			</md-whiteframe>
+  		</li>
+
+      <div class="load-more-container">
+        <md-progress-linear class="md-accent load-more-progress" ng-show="showprogressloadmore" md-mode="indeterminate"></md-progress-linear>
+    		<md-button class="load-more md-raised md-primary" ng-cloak ng-show="showloadmore" ng-click="loadMore()">Load More</md-button>
+      </div>
+  	</ul>
+  </section>
 
 
 {% endblock %}
