Fixes after discussion

--- a/zuper/templates/login.html
+++ b/zuper/templates/login.html
@@ -29,7 +29,7 @@
 		<h1>Welcome to ZuperFast</h1>
 		<h2>Please login to continue.</h2>
 	</header>
-	<section class="auth clearfix">
+	<section class="auth clearfix" ng-cloak>
 			<form name="loginForm" ng-keyup="$event.keyCode == 13 ? login(user) : null">
 
 				<md-input-container md-no-float class="md-block">
