Adding some more requirements

--- a/zuper/templates/orders.html
+++ b/zuper/templates/orders.html
@@ -46,6 +46,8 @@
       <md-tab label="PENDING" ng-click="listAll('Pending', 'showprogress')"></md-tab>
       <md-tab label="OPEN" ng-click="listAll('Open', 'showprogress')"></md-tab>
       <md-tab label="CLOSED" ng-click="listAll('Closed', 'showprogress')"></md-tab>
+      <md-tab label="CANCELLED" ng-click="listAll('Cancelled', 'showprogress')"></md-tab>
+      <md-tab label="COMPLETED" ng-click="listAll('Completed', 'showprogress')"></md-tab>
     </md-tabs>
 
     <div class="site-progress-holder">
