Fix user online issue and white dialog issue

--- a/zuper/static/css/orders/main.css
+++ b/zuper/static/css/orders/main.css
@@ -2,6 +2,10 @@ body {
 	overflow-y: scroll; 
 }
 
+body.md-dialog-is-showing {
+    overflow: visible !important;
+}
+
 .header-tabs {
 	text-align: center;
 }
