--- a/zuper/templates/bars.html
+++ b/zuper/templates/bars.html
@@ -2,58 +2,41 @@
 <html>
 <head>  
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <script type="text/javascript">
-    google.charts.load("current", {packages:['corechart']});
-    google.charts.setOnLoadCallback(drawChart);
-    var g_data = {{ g_data | safe}};
-    function drawChart() {
-      //console.log("data", g_data);
-      var data = google.visualization.arrayToDataTable(
-          g_data
-      );
-      var view = new google.visualization.DataView(data);
-      view.setColumns([0, 1,
-                       { calc: "stringify",
-                         sourceColumn: 1,
-                         type: "string",
-                         role: "annotation" },
-                       2]);
+    <script type="text/javascript">
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable(
+            {{ g_data | safe}}
+          );
 
-      var options = {
-        title: "Pings",
-        height: 400,
-        bar: {groupWidth: "95%"},
-        legend: { position: "none" },
-      };
-      var chart = new google.visualization.ColumnChart(document.getElementById("columnchart_values"));
-      chart.draw(view, options);
+        var options = {
+          title: 'Company Performance',
+          curveType: 'function',
+          legend: { position: 'bottom' }
+        };
 
-      //battery data
-      var b_data = {{ b_data | safe}};
-      var battery_data = google.visualization.arrayToDataTable(
-          b_data
-      );
-      var battery_view = new google.visualization.DataView(battery_data);
-      battery_view.setColumns([0, 1,
-                       { calc: "stringify",
-                         sourceColumn: 1,
-                         type: "string",
-                         role: "annotation" },
-                       2]);
+        var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
 
-      var options = {
-        title: "Battery",
-        height: 400,
-        bar: {groupWidth: "95%"},
-        legend: { position: "none" },
-      };
-      var chart = new google.visualization.ColumnChart(document.getElementById("battery"));
-      chart.draw(battery_view, options);
-  }
+        chart.draw(data, options);
+
+        var b_data = google.visualization.arrayToDataTable(
+            {{ b_data | safe}}
+          );
+
+        var b_options = {
+          title: 'Battery ',
+          curveType: 'function',
+          legend: { position: 'bottom' }
+        };
+
+        var b_chart = new google.visualization.LineChart(document.getElementById('b_curve_chart'));
+        b_chart.draw(b_data, b_options);
+      }
   </script>
   </head>
   <body>
-    <div id="columnchart_values"></div> 
-    <div id="battery"></div>    
+    <div id="curve_chart"></div> 
+    <div id="b_curve_chart"></div> 
   </body>
   </html>
